--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/trailer_title"
+        android:id="@+id/trailer_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/launch_button"
+        android:text="launch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
