--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -19,7 +19,7 @@
             <ImageView
                 android:id="@+id/movie_details_poster_imageview"
                 android:paddingRight="@dimen/standard_view_padding"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
 
             <LinearLayout
