--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,4 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="practice.maddie.popularmoviesstage2.MoviesFragment"
-    tools:layout="@layout/fragment_movies"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movies_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
