--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -76,6 +76,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_header"
                 android:text="@string/trailer_header"
                 android:textStyle="bold"
                 android:layout_gravity="left"/>
@@ -87,6 +88,8 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+                android:id="@+id/review_section_label"
+                android:textSize="@dimen/text_size_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/reviews_header"
