--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/movies_fragment_container"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/movies_fragment_container"
+              android:orientation="vertical"
+              android:layout_height="match_parent"
+              android:layout_width="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/page_loading"
-        android:background="#80000000"
-        android:layout_gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/page_loading"
+            android:background="#80000000"
+            android:layout_gravity="center">
 
         <ProgressBar
-            android:id="@+id/progress_bar"
-            android:indeterminate="true"
-            style="@android:style/Widget.ProgressBar.Large.Inverse"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            />
+                android:id="@+id/progress_bar"
+                android:indeterminate="true"
+                style="@android:style/Widget.ProgressBar.Large.Inverse"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+        />
+
     </RelativeLayout>
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/gridview_movies"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="3"
-        android:gravity="center"
-        tools:context=".MainActivity$MainActivityFragment"/>
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/gridview_movies"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:numColumns="3"
+              android:gravity="center"
+              tools:context=".MainActivity$MainActivityFragment"/>
 
-</FrameLayout>
+</LinearLayout>
