--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,14 +2,16 @@
 
 <resources>
 
-    <string-array name="sortOrder">
-        <item>@string/pref_sort_popularity_label</item>
-        <item>@string/pref_sort_rating_label</item>
+    <string-array name="sort_order_label_values">
+        <item>@string/sort_by_popularity</item>
+        <item>@string/sort_by_rating</item>
+        <item>@string/pref_show_favorites</item>
     </string-array>
 
-    <string-array name="sortOrderValues">
+    <string-array name="sort_order_values">
         <item>@string/pref_sort_popularity</item>
         <item>@string/pref_sort_rating</item>
+        <item>@string/pref_show_favorites</item>
     </string-array>
 
 </resources>
